examples/negative/parse_errors/L1/reserved_module.ob
MODULE Reserved;

VAR MODULE: INTEGER;

END Reserved.
